tests/golden/parse_errors/multiple_top_level_parse_errors.cd
print ;
let x = ;
print 1;
