tests/golden/parse_errors/multiple_top_level_parse_errors.err
Parse error at 1:7: expected expression
  print ;
        ^
Parse error at 2:9: expected expression
  let x = ;
          ^
